--- a/src/App.module.css
+++ b/src/App.module.css
@@ -1,3 +1,10 @@
 .appCover {
     
 }
+
+.intialMessage {
+    font-size: 42px;
+    color: white;
+    text-align: center;
+    margin-top: 50px;
+}
