--- a/src/containers/Search/Search.module.css
+++ b/src/containers/Search/Search.module.css
@@ -2,6 +2,13 @@
     padding: 10px;
     border: 1px solid black;
     border-radius: 5px;
+    font-size: 18px;
+    width: 300px;
+    opacity: 0.7;
+}
+
+.inputText:focus {
+    outline: none;
 }
 
 .form {
@@ -12,7 +19,7 @@
 .searchContainer {
     position: relative;
     display: inline-block;
-    margin-top: 10px;
+    margin-top: 30px;
 }
 
 .searchButton {
@@ -28,7 +35,7 @@
     height: 20px;
     background-size: 20px 20px;
     position: absolute;
-    top: 7px;
-    right: 7px;
+    top: 10px;
+    right: 10px;
     cursor: pointer;
 }
