--- a/src/containers/Search/Search.module.css
+++ b/src/containers/Search/Search.module.css
@@ -39,3 +39,23 @@
     right: 10px;
     cursor: pointer;
 }
+
+@media (max-width: 450px) {
+    .searchContainer {
+        position: relative;
+        width: 100%;
+        margin-top: 0px;
+    }
+    .inputText {
+        width: 94%;
+        height: 35px;
+        border-radius: 0px;
+    }
+    .searchIcon {
+        width: 25px;
+        height: 25px;
+        background-size: 25px 25px;
+        top: 15px;
+        right: 15px;
+    } 
+}
