--- a/src/index.css
+++ b/src/index.css
@@ -15,3 +15,11 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
 }
+
+@media (max-width: 450px) {
+  body {
+    background-image: url('./food-cover.jpg');
+    background-repeat: no-repeat;
+    background-size: cover;
+  }
+}
